--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -27,5 +27,5 @@
   <div class="main-content-wrap"> <!-- closed in foot.html -->
     <div class="main-content">    <!-- closed in foot.html -->
       <div class="main-header">
-        <a id="github" href="//github.com/storopoli/Bayesian-Julia">Code on GitHub</a>
+        <a id="github" href="https://github.com/storopoli/Bayesian-Julia">Code on GitHub</a>
       </div>
