--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -11,7 +11,7 @@
     <div class="menu" id="side-menu">
       <ul class="menu-list">
         <li class="menu-list-item {{ispage index}}active{{end}}"><a href="/" class="menu-list-link {{ispage index}}active{{end}}">Home</a>
-        <li class="menu-list-item {{ispage menu1/*}}active{{end}}"><a href="/pages/test/" class="menu-list-link {{ispage menu1}}active{{end}}">1. Example</a>
+        <li class="menu-list-item {{ispage menu1/*}}active{{end}}"><a href="/test/" class="menu-list-link {{ispage menu1}}active{{end}}">1. Example</a>
         <li class="menu-list-item {{ispage menu2/*}}active{{end}}"><a href="/menu2/" class="menu-list-link {{ispage menu2}}active{{end}}">More goodies</a>
         <li class="menu-list-item {{ispage menu3/*}}active{{end}}"><a href="/menu3/" class="menu-list-link {{ispage menu3}}active{{end}}">Tags</a>
           <ul class="menu-list-child-list ">
