--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -3,7 +3,7 @@
   <div class="side-bar">
     <div class="header">
       <a href="/" class="title">
-        Franklin
+        Bayesian Stats
       </a>
     </div>
     <label for="show-menu" class="show-menu">MENU</label>
