--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -11,7 +11,17 @@
     <div class="menu" id="side-menu">
       <ul class="menu-list">
         <li class="menu-list-item {{ispage index}}active{{end}}"><a href="/" class="menu-list-link {{ispage index}}active{{end}}">Home</a>
-        <li class="menu-list-item {{ispage pages/test/*}}active{{end}}"><a href="/pages/test/" class="menu-list-link {{ispage pages/test}}active{{end}}">1. Example</a>
+        <li class="menu-list-item {{ispage pages/1_why_Julia/*}}active{{end}}"><a href="/pages/1_why_Julia/" class="menu-list-link {{ispage pages/1_why_Julia}}active{{end}}">1. Why Julia?</a>
+        <li class="menu-list-item {{ispage pages/2_bayes_stats/*}}active{{end}}"><a href="/pages/2_bayes_stats/" class="menu-list-link {{ispage pages/2_bayes_stats}}active{{end}}">2. What is Bayesian Statistics?</a>
+        <li class="menu-list-item {{ispage pages/3_prob_dist/*}}active{{end}}"><a href="/pages/3_prob_dist/" class="menu-list-link {{ispage pages/3_prob_dist}}active{{end}}">3. Common Probability Distributions?</a>
+        <li class="menu-list-item {{ispage pages/4_Turing/*}}active{{end}}"><a href="/pages/4_Turing/" class="menu-list-link {{ispage pages/4_Turing}}active{{end}}">4. How to use Turing</a>
+        <li class="menu-list-item {{ispage pages/5_MCMC/*}}active{{end}}"><a href="/pages/5_MCMC/" class="menu-list-link {{ispage pages/5_MCMC}}active{{end}}">5. Markov Chain Monte Carlo (MCMC)</a>
+        <li class="menu-list-item {{ispage pages/6_linear_reg/*}}active{{end}}"><a href="/pages/6_linear_reg/" class="menu-list-link {{ispage pages/6_linear_reg}}active{{end}}">6. Bayesian Linear Regression</a>
+        <li class="menu-list-item {{ispage pages/7_logistic_reg/*}}active{{end}}"><a href="/pages/7_logistic_reg/" class="menu-list-link {{ispage pages/7_logistic_reg}}active{{end}}">7. Bayesian Logistic Regression</a>
+        <li class="menu-list-item {{ispage pages/8_count_reg/*}}active{{end}}"><a href="/pages/8_count_reg/" class="menu-list-link {{ispage pages/8_count_reg}}active{{end}}">8. Bayesian Regression with Count Data</a>
+        <li class="menu-list-item {{ispage pages/9_robust_reg/*}}active{{end}}"><a href="/pages/9_robust_reg/" class="menu-list-link {{ispage pages/9_robust_reg}}active{{end}}">9. Robust Bayesian Regression</a>
+        <li class="menu-list-item {{ispage pages/10_multilevel_models/*}}active{{end}}"><a href="/pages/10_multilevel_models/" class="menu-list-link {{ispage pages/10_multilevel_models}}active{{end}}">10. Multilevel Models</a>
+        <li class="menu-list-item {{ispage pages/11_Turing_tricks/*}}active{{end}}"><a href="/pages/11_Turing_tricks/" class="menu-list-link {{ispage pages/11_Turing_tricks}}active{{end}}">11. Computational Tricks with Turing</a>
       </ul>
     </div>
     <div class="footer">
