--- a/_css/franklin.css
+++ b/_css/franklin.css
@@ -275,6 +275,11 @@ body { counter-reset: eqnum; }
   padding-right: 5px;
 }
 
+.no-number .katex-display::after {
+  counter-increment: nothing;
+  content: "";
+}
+
 /* ==================================================================
     CODE & HIGHLIGHT.JS
 ================================================================== */
