--- a/_layout/head.html
+++ b/_layout/head.html
@@ -13,3 +13,13 @@
 
 
 <!-- Content appended here (in class franklin-content) -->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-186284914-6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-186284914-6');
+</script>
