updated layout to use Julia Logo

--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -25,7 +25,7 @@
       </ul>
     </div>
     <div class="footer">
-      This is <em>Just the docs</em>, adapted from the <a href="https://github.com/pmarsceill/just-the-docs" target="_blank">Jekyll theme</a>.
+      <a href="https://www.julialang.org"><img style="height:50px;padding-left:10px;margin-bottom:15px;" src="images/julia_logo.svg" alt="Julia Logo"></a>
     </div>
   </div>
   <!-- CONTENT -->
