updated logo to all pages

--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -25,7 +25,7 @@
       </ul>
     </div>
     <div class="footer">
-      <a href="https://www.julialang.org"><img style="height:50px;padding-left:10px;margin-bottom:15px;" src="images/julia_logo.svg" alt="Julia Logo"></a>
+      <a href="https://www.julialang.org"><img style="height:50px;padding-left:10px;margin-bottom:15px;" src="https://julialang.org/assets/infra/logo.svg" alt="Julia Logo"></a>
     </div>
   </div>
   <!-- CONTENT -->
