Layout fix of side bar

--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -13,7 +13,7 @@
         <li class="menu-list-item {{ispage index}}active{{end}}"><a href="/" class="menu-list-link {{ispage index}}active{{end}}">Home</a>
         <li class="menu-list-item {{ispage pages/1_why_Julia/*}}active{{end}}"><a href="/pages/1_why_Julia/" class="menu-list-link {{ispage pages/1_why_Julia}}active{{end}}">1. Why Julia?</a>
         <li class="menu-list-item {{ispage pages/2_bayes_stats/*}}active{{end}}"><a href="/pages/2_bayes_stats/" class="menu-list-link {{ispage pages/2_bayes_stats}}active{{end}}">2. What is Bayesian Statistics?</a>
-        <li class="menu-list-item {{ispage pages/3_prob_dist/*}}active{{end}}"><a href="/pages/3_prob_dist/" class="menu-list-link {{ispage pages/3_prob_dist}}active{{end}}">3. Common Probability Distributions?</a>
+        <li class="menu-list-item {{ispage pages/3_prob_dist/*}}active{{end}}"><a href="/pages/3_prob_dist/" class="menu-list-link {{ispage pages/3_prob_dist}}active{{end}}">3. Common Probability Distributions</a>
         <li class="menu-list-item {{ispage pages/4_Turing/*}}active{{end}}"><a href="/pages/4_Turing/" class="menu-list-link {{ispage pages/4_Turing}}active{{end}}">4. How to use Turing</a>
         <li class="menu-list-item {{ispage pages/5_MCMC/*}}active{{end}}"><a href="/pages/5_MCMC/" class="menu-list-link {{ispage pages/5_MCMC}}active{{end}}">5. Markov Chain Monte Carlo (MCMC)</a>
         <li class="menu-list-item {{ispage pages/6_linear_reg/*}}active{{end}}"><a href="/pages/6_linear_reg/" class="menu-list-link {{ispage pages/6_linear_reg}}active{{end}}">6. Bayesian Linear Regression</a>
