updated with epi models

--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -22,6 +22,7 @@
         <li class="menu-list-item {{ispage pages/9_robust_reg/*}}active{{end}}"><a href="/pages/9_robust_reg/" class="menu-list-link {{ispage pages/9_robust_reg}}active{{end}}">9. Robust Bayesian Regression</a>
         <li class="menu-list-item {{ispage pages/10_multilevel_models/*}}active{{end}}"><a href="/pages/10_multilevel_models/" class="menu-list-link {{ispage pages/10_multilevel_models}}active{{end}}">10. Multilevel Models</a>
         <li class="menu-list-item {{ispage pages/11_Turing_tricks/*}}active{{end}}"><a href="/pages/11_Turing_tricks/" class="menu-list-link {{ispage pages/11_Turing_tricks}}active{{end}}">11. Computational Tricks with Turing</a>
+        <li class="menu-list-item {{ispage pages/12_epi_models/*}}active{{end}}"><a href="/pages/12_epi_models/" class="menu-list-link {{ispage pages/12_epi_models}}active{{end}}">12. Bayesian Epidemiological Models</a>
       </ul>
     </div>
     <div class="footer">
